--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,20 @@
 {
-  "version": "0.1.0",
-  "manifest_version": 2,
+  "version": "0.1.2",
+  "manifest_version": 3,
   "offline_enabled": true,
-  "permissions": ["storage"],
   "short_name": "code-minifier",
   "name": "Code Minifier (JS, CSS, HTML)",
+  "permissions": ["storage", "contextMenus"],
   "sandbox": {"pages": ["data/interface/index.html"]},
   "homepage_url": "https://mybrowseraddon.com/code-minifier.html",
   "description": "A lite and free JavasScript, CSS and HTML minifier for your browser.",
-  "background": {
-    "persistent": false,
-    "scripts": [
-      "lib/config.js", 
-      "lib/chrome.js",
-      "lib/runtime.js",
-      "lib/common.js"
-    ]
+  "commands": {
+    "_execute_action": {}
   },
-  "browser_action": {
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
     "default_title": "Code Minifier",
     "default_icon": {
       "16": "data/icons/16.png",
